--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "@vue/apollo-composable": "^4.0.0-alpha.16",
     "core-js": "^3.6.5",
     "graphql": "^16.2.0",
     "graphql-tag": "^2.12.6",
